--- a/daf-publicdata.yaml
+++ b/daf-publicdata.yaml
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
       - name: publicdata
-        image: 10.98.74.120:5000/publicdata:1.0-alpha
+        image: 10.98.74.120:5000/publicdata:1.0.0-SNAPSHOT
         imagePullPolicy: Always
         lifecycle:
           postStart:
